Tasty CSS-animated Hamburgers

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -738,6 +738,22 @@
         <div id="zoom"></div>
       </li>  
 
+      <li>
+        <a href="https://jonsuh.com/hamburgers/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://jonsuh.com/hamburgers/" target="_blank">Tasty CSS-animated hamburgers</a>
+          </h2>
+          <p>Animation</p>
+        </div>
+        <a class="resource-button" href="https://jonsuh.com/hamburgers/" target="_blank">Veja</a>
+        <div id="zoom"></div>
+      </li>  
+
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Zoom | Modal | Popup</h2>
