--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -237,18 +237,18 @@
       </li> 
 
       <li>
-        <a href="https://thinker3197.github.io/progressively/" target="_blank">
+        <a href="https://www.netlify.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="https://avatars0.githubusercontent.com/u/7892489?s=200&v=4" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://thinker3197.github.io/progressively/" target="_blank">Progressively</a>
+            <a href="https://www.netlify.com/" target="_blank">Netlify</a>
           </h2>
-          <p>A JavaScript library to load images progressively</p>
+          <p>Build, deploy, and manage modern web projects</p>
         </div>
-        <a class="resource-button" href="https://thinker3197.github.io/progressively/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://www.netlify.com/" target="_blank">Veja</a>
       </li> 
 
       <li>
