link sistema de cadastro de pacientes realizado no curso de javascript

--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -145,6 +145,21 @@
         </div>
         <a class="resource-button" href="https://cursohtmlcssparte2-robsonvinicius.netlify.com/index.html" target="_blank">Veja</a>
       </li>   
+              
+      <li>
+        <div class="resource-icon">
+          <a href="https://robsonvinicius.github.io/javascript-projeto-nutricao/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="Sistema de cadastro de pacientes" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://robsonvinicius.github.io/javascript-projeto-nutricao/" target="_blank">Aparecida Nutricionista</a>
+          </h2>
+          <p>Sistema de cadastro de pacientes realizado no curso de Javascript</p>
+        </div>
+        <a class="resource-button" href="https://robsonvinicius.github.io/javascript-projeto-nutricao/" target="_blank">Veja</a>
+      </li>   
 
       <div class="linha"></div>        
       <h2 class="margen-titulo color-frontend">Exercícios</h2>
