10 Free JavaScript Modal Window Plugins

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -818,6 +818,21 @@
           <p>Image zoom that makes sense | <a href="https://github.com/kingdido999/zooming" target="_blank"><strong style="background-color: #F8E95A; padding: 3px;">Github</strong></a></p>
         </div>
         <a class="resource-button" href="http://desmonding.me/zooming/" target="_blank">Veja</a>
+    	</li>
+        
+      <li>
+        <a href="https://www.hongkiat.com/blog/best-free-javascript-modal-window-plugins/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.hongkiat.com/blog/best-free-javascript-modal-window-plugins/" target="_blank">10 Free JavaScript Modal Window Plugins</a>
+          </h2>
+          <p>You can find plenty of pure CSS modals but these don’t offer the same control as JavaScript.</p>
+        </div>
+        <a class="resource-button" href="https://www.hongkiat.com/blog/best-free-javascript-modal-window-plugins/" target="_blank">Veja</a>
         <div id="icones"></div>
     	</li>
     
