Canais brasileiros de T.I

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2007,6 +2007,21 @@
       </li>
 
       <li>
+        <a href="https://github.com/carolcodes/youtube-br-desenvolvimento?fbclid=IwAR3xUDZGm1arUtHLHINMpSReMWZIr_kR_9hGC5y1G8vvY00aLq39aAJcv14" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>  
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://github.com/carolcodes/youtube-br-desenvolvimento?fbclid=IwAR3xUDZGm1arUtHLHINMpSReMWZIr_kR_9hGC5y1G8vvY00aLq39aAJcv14" target="_blank">Youtube BR Desenvolvimento</a>
+          </h2>
+          <p>Canais brasileiros para pessoas desenvolvedoras</p>
+        </div>
+        <a class="resource-button" href="https://github.com/carolcodes/youtube-br-desenvolvimento?fbclid=IwAR3xUDZGm1arUtHLHINMpSReMWZIr_kR_9hGC5y1G8vvY00aLq39aAJcv14" target="_blank">Veja</a>   
+      </li>
+
+      <li>
         <a href="https://onebitcode.com/course/ruby-puro/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
