Fique por dentro das principais tendências em Webdesign, UX e UI para 2018, 2019 e 2020

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -862,6 +862,22 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://hipsters.tech/heuristicas-e-buzzwords-em-ux-hipsters-14/" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://arkansystem.com.br/tendencias-em-webdesign-ux-e-ui-para-2018-2019-e-2020/?fbclid=IwAR3xi9roz1q9_hGwIeIsKg3uUgobCB7BeGrkNLOgL4KpnjhXHYetj14u1xU" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://arkansystem.com.br/tendencias-em-webdesign-ux-e-ui-para-2018-2019-e-2020/?fbclid=IwAR3xi9roz1q9_hGwIeIsKg3uUgobCB7BeGrkNLOgL4KpnjhXHYetj14u1xU" target="_blank">Fique por dentro das principais tendências em Webdesign, UX e UI para 2018, 2019 e 2020!
+            </a>
+          </h2>
+          <p>arkan system</p>
+        </div>
+        <a class="resource-button" href="https://arkansystem.com.br/tendencias-em-webdesign-ux-e-ui-para-2018-2019-e-2020/?fbclid=IwAR3xi9roz1q9_hGwIeIsKg3uUgobCB7BeGrkNLOgL4KpnjhXHYetj14u1xU" target="_blank">Veja</a>
+      </li>
+
     </ul>
       <ul class="sidebar-navigation">
               <li><a href="../apoio/index.html"><div class="circle"></div>Apoio</a></li>	
