--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -913,7 +913,6 @@
           <p>Custom <mark>icons</mark></p>
         </div>
         <a class="resource-button" href="http://fontello.com/" target="_blank">Veja</a>
-        <div id="documentacao"></div>
       </li>  
 
       <li>
@@ -1235,6 +1234,22 @@
         </div>
         <a class="resource-button" href="http://codingheroes.io/resources/" target="_blank">Veja</a>       
       </li> -->
+
+      <li>
+        <a href="https://guides.github.com/features/mastering-markdown/#examples" target="_blank">
+          <div class="resource-icon">
+            <img src="https://www.brandeps.com/logo-download/M/Markdown-01.png" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://guides.github.com/features/mastering-markdown/#examples" target="_blank">Markdown</a>
+          </h2>
+          <p>Documentação para Markdown (Github Guides)</p>
+        </div>
+        <a class="resource-button" href="https://guides.github.com/features/mastering-markdown/#examples" target="_blank">Veja</a>
+        <div id="utilitarios"></div>
+      </li>
 
       <li>
         <a href="https://docs.emmet.io/cheat-sheet/" target="_blank">
