documentação do Markdown

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -368,7 +368,7 @@
       <li>
         <a href="http://blog.caelum.com.br/comecando-a-organizar-seu-css/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p200x200/10155941_10152196905759086_2402332230842303175_n.png?_nc_cat=0&oh=7fc37bada3e79e0ab0392f7c954465b8&oe=5BE7B1FE" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/10155941_10152196905759086_2402332230842303175_n.png?_nc_cat=107&_nc_ht=scontent.fcwb2-2.fna&oh=437f8c68560ea4ef5454f599cb13f031&oe=5C717164" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -1238,7 +1238,7 @@
       <li>
         <a href="https://guides.github.com/features/mastering-markdown/#examples" target="_blank">
           <div class="resource-icon">
-            <img src="https://www.brandeps.com/logo-download/M/Markdown-01.png" alt="#" />
+            <img src="http://pad.haroopress.com/docs/en/markdown-doc-logos/images/markdown.png" alt="#" />
           </div>
         </a>
         <div class="resource-details">
