Lembrete plugin Live Server

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1311,7 +1311,7 @@
           <h2>
             <a href="https://browsersync.io/" target="_blank">Browser Sync</a>
           </h2>
-          <p>Live Preview</p>
+          <p>Live Preview | Outra alternativa é o plugin Live Server para ser utilizado no Vs Code</p>
         </div>
         <a class="resource-button" href="https://browsersync.io/" target="_blank">Veja</a>
   		</li>
