atualização thumbnail Campaign Monitor CSS

--- a/my/paginas/emailMkt/index.html
+++ b/my/paginas/emailMkt/index.html
@@ -73,7 +73,7 @@
 
           <li>
             <div class="resource-icon">
-              <a href="https://emailclientmarketshare.com/" target="_blank" bgcolor="#000">
+              <a href="https://emailclientmarketshare.com/" target="_blank">
                 <img src="https://assets.litmuscdn.com/images/next/shared/footer-logo.svg?1517237421" alt="#" />
               </a>
             </div>
@@ -89,7 +89,7 @@
           <li>
             <div class="resource-icon">
               <a href="https://www.campaignmonitor.com/css/" target="_blank">
-                <img src="https://pbs.twimg.com/profile_images/1009561558186250241/LHo3_yQM_400x400.jpg" alt="#" />
+                <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/44052527_10155668920095877_274902272293470208_n.jpg?_nc_cat=1&_nc_ht=scontent.fcwb2-1.fna&oh=30f4c509045e2a8bb61c538710714b70&oe=5C77C9A2" alt="#" />
               </a>
             </div>
             <div class="resource-details">
