atualização thumbnail e-mails

--- a/my/paginas/emailMkt/index.html
+++ b/my/paginas/emailMkt/index.html
@@ -140,7 +140,7 @@
           <li>
             <div class="resource-icon">
               <a href="https://e.walmart.com.br/pub/sf/FormLink?_ri_=X0Gzc2X%3DYQpglLjHJlYQGo9nHCgzgGykAfzdfW4R5l26zeMcR1Gzg1CclUla3zgzclgNqC8vOkSeqbdoCqzaWwezefVXMtX%3DYQpglLjHJlYQGlnzeejWzd537fzf5zdSHl19Kzfzam3tmyLFsTp3rL2OzcMl6bauEYzdo1pzbytOzgzbSb06O&_ei_=EolaGGF4SNMvxFF7KucKuWMGgsFXN93Du_79o6SeizvfKXuaD8ST8hUIuAOwntlZ2TYz3Vx7BkWmf7x8a58269-IVbqNfabgR14lYkX-Zin4OxJk8G33Y-orHRAoe9RIhC1_uVoeDryK-nQ-RmeILcqn9kvAeRKbXCJblb-CoJQwPLDk1P7sY0daMFm7Tg." target="_blank">
-                <img src="https://pbs.twimg.com/profile_images/940585556026650624/FUDkLujf_400x400.jpg" alt="email marketing 1" />
+                <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/45227996_10157032539609236_7157058529105281024_n.jpg?_nc_cat=1&_nc_ht=scontent.fcwb2-1.fna&oh=de7b828ddef6b337636b499eadf744d0&oe=5C64EB20" alt="email marketing 1" />
               </a>
             </div>
             <div class="resource-details">
@@ -157,7 +157,7 @@
           <li>
             <div class="resource-icon">
               <a href="https://www.pontofrio-imagens.com.br/html/news/parceiros/2017/intermail/20171018/4d0b48201140/index.html?59e68" target="_blank">
-                <img src="https://pbs.twimg.com/profile_images/936643060670267394/GBxjjPdK_400x400.jpg" alt="email marketing 1" />
+                <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/10996487_10155263521940717_2427729463829252090_n.png?_nc_cat=1&_nc_ht=scontent.fcwb2-1.fna&oh=98956b9480f400ba95acb847f4b98fbe&oe=5CB10A96" alt="email marketing 1" />
               </a>
             </div>
             <div class="resource-details">
@@ -187,7 +187,7 @@
           <li>
             <div class="resource-icon">
               <a href="http://img.afiliados.com.br/mkt/email2.php?id=submarino-20170321094432-016287&btg_flag=1&btg_source=7HX37xXf9HImyZYEw2IhyxXM9HiEyJ%3D%3D" target="_blank">
-                <img src="https://pbs.twimg.com/profile_images/1029489901740466176/pvugUnYl_400x400.jpg" alt="email marketing 1" />
+                <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/36882476_2271830369499702_9200658682130464768_n.png?_nc_cat=1&_nc_ht=scontent.fcwb2-1.fna&oh=778307d35a79bceb39dcf7e91cecbcc1&oe=5C7FA746" alt="email marketing 1" />
               </a>
             </div>
             <div class="resource-details">
@@ -202,7 +202,7 @@
           <li>
             <div class="resource-icon">
               <a href="http://www.casasbahia-imagens.com.br/html/news/parceiros/2017/intermail/20170321/4adad4143247/index.html?58d01&btg_flag=1&btg_source=7HX37xXf9HImyZYEw2IhyxXM9HiEyJ%3D%3D" target="_blank">
-                <img src="https://pbs.twimg.com/profile_images/1020029100327567360/Ppd117Wo_400x400.jpg" />
+                <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/44990471_2204160089644973_5147158149773393920_n.png?_nc_cat=1&_nc_ht=scontent.fcwb2-1.fna&oh=a19e649d464426cd8c69e574f124aad9&oe=5C71D510" />
               </a>
             </div>
             <div class="resource-details">
@@ -312,7 +312,7 @@
           <li>
             <div class="resource-icon">
               <a href="https://www.campaignmonitor.com/blog/" target="_blank">
-                <img src="https://pbs.twimg.com/profile_images/1009561558186250241/LHo3_yQM_400x400.jpg" />
+                <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/44052527_10155668920095877_274902272293470208_n.jpg?_nc_cat=1&_nc_ht=scontent.fcwb2-1.fna&oh=30f4c509045e2a8bb61c538710714b70&oe=5C77C9A2" />
               </a>
             </div>
             <div class="resource-details">
