--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -878,6 +878,54 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://arkansystem.com.br/tendencias-em-webdesign-ux-e-ui-para-2018-2019-e-2020/?fbclid=IwAR3xi9roz1q9_hGwIeIsKg3uUgobCB7BeGrkNLOgL4KpnjhXHYetj14u1xU" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://designculture.com.br/o-que-e-ui-design-e-ux-design" target="_blank">
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p200x200/45981494_2399728840042658_5115077020404940800_n.png?_nc_cat=108&_nc_ht=scontent.fcwb2-2.fna&oh=24de1836e11aa4d6302e67aa35aeedd3&oe=5C6C674D" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://designculture.com.br/o-que-e-ui-design-e-ux-design" target="_blank">O que é UI Design e UX Design?
+            </a>
+          </h2>
+          <p>Design Culture</p>
+        </div>
+        <a class="resource-button" href="https://designculture.com.br/o-que-e-ui-design-e-ux-design" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.raffcom.com.br/blog/qual-a-diferenca-entre-ux-e-ui/" target="_blank">
+            <img src="https://media.licdn.com/dms/image/C560BAQFLvdRaV5I6zw/company-logo_200_200/0?e=2159024400&v=beta&t=ZhmAK_08DN-vUnXCWhbCWlLgGDr1nDE94RHYBfYjPzs" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.raffcom.com.br/blog/qual-a-diferenca-entre-ux-e-ui/" target="_blank">Qual a diferença entre UX e UI?
+            </a>
+          </h2>
+          <p>Raffcom</p>
+        </div>
+        <a class="resource-button" href="https://www.raffcom.com.br/blog/qual-a-diferenca-entre-ux-e-ui/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://br.udacity.com/blog/post/ux-ui-diferencas" target="_blank">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/c1.0.199.199/13233111_254889381532001_6934889014737161810_n.png?_nc_cat=1&_nc_ht=scontent.fcwb2-1.fna&oh=fe6cbc055c3c0cb2ce9844ddd697b07c&oe=5C6F3728" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://br.udacity.com/blog/post/ux-ui-diferencas" target="_blank">UX e UI: quais são as maiores diferenças entre esses campos?
+            </a>
+          </h2>
+          <p>Udacity</p>
+        </div>
+        <a class="resource-button" href="https://br.udacity.com/blog/post/ux-ui-diferencas" target="_blank">Veja</a>
+      </li>
+
     </ul>
       <ul class="sidebar-navigation">
               <li><a href="../apoio/index.html"><div class="circle"></div>Apoio</a></li>	
