MCSD - Programming in HTML5 with JavaScript and CS3

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2438,6 +2438,36 @@
         <a class="resource-button" href="https://mva.microsoft.com/pt-br/training-courses/introduo-rpida-ao-desenvolvimento-em-html5-com-javascript-e-css3-8223?l=AJoPBmRiB_9300115888" target="_blank">Veja</a>   
       </li>
 
+      <li>
+        <a href="http://www.firebrandtraining.co.uk/pdf/learn/microsoft/mcsd-web-applications-html5-courseware.pdf" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="http://www.firebrandtraining.co.uk/pdf/learn/microsoft/mcsd-web-applications-html5-courseware.pdf" target="_blank">MCSD: 70-480: Programming in HTML5 with JavaScript and CSS3</a>
+          </h2>
+          <p>Firebrand Training</p>
+        </div>
+        <a class="resource-button" href="http://www.firebrandtraining.co.uk/pdf/learn/microsoft/mcsd-web-applications-html5-courseware.pdf" target="_blank">Veja</a>   
+      </li>
+
+      <li>
+        <a href="http://www.accelerated-ideas.com/70480-practice-test.aspx#.W_Ry0-hKiUm" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="http://www.accelerated-ideas.com/70480-practice-test.aspx#.W_Ry0-hKiUm" target="_blank">70-480 Practice Test: HTML5, Javascript, CSS3</a>
+          </h2>
+          <p>Accelerated Ideas</p>
+        </div>
+        <a class="resource-button" href="http://www.accelerated-ideas.com/70480-practice-test.aspx#.W_Ry0-hKiUm" target="_blank">Veja</a>   
+      </li>
+
       <div id="foruns"></div>
 
       <div class="linha"></div>
