Tim tec Cursos Online Gratuito

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1822,6 +1822,19 @@
 				</div>
 				<a class="resource-button" href="https://alison.com/courses" target="_blank">Veja</a>
 			</li>
+			
+			<li>
+				<a href="https://cursos.timtec.com.br/" target="_blank">
+					<div class="resource-icon">
+						<img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/12993353_909861422444529_6773033912990293596_n.jpg?_nc_cat=106&_nc_ht=scontent.fcwb2-1.fna&oh=83b379b65c920cdb38531770ae8a2b4e&oe=5C7A22CE" alt="Cursos" />
+					</div>
+				</a>
+				<div class="resource-details">
+					<h2> <a href="https://cursos.timtec.com.br/" target="_blank">Tim Tec</a> </h2>
+					<p>Cursos Online Gratuito</p>
+				</div>
+				<a class="resource-button" href="https://cursos.timtec.com.br/" target="_blank">Veja</a>
+			</li>
 
 			<div id="atalhos"></div>
 
