learncafe e Curso em Vídeo

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1809,6 +1809,33 @@
 			<div class="linha"></div>
 			<h2 class="margen-titulo color-apoio">Cursos</h2>
 			<div class="linha"></div>
+
+				
+			<li>
+				<a href="https://cursos.timtec.com.br/" target="_blank">
+					<div class="resource-icon">
+						<img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/12993353_909861422444529_6773033912990293596_n.jpg?_nc_cat=106&_nc_ht=scontent.fcwb2-1.fna&oh=83b379b65c920cdb38531770ae8a2b4e&oe=5C7A22CE" alt="Cursos" />
+					</div>
+				</a>
+				<div class="resource-details">
+					<h2> <a href="https://cursos.timtec.com.br/" target="_blank">Tim Tec</a> </h2>
+					<p>Cursos Online Gratuito</p>
+				</div>
+				<a class="resource-button" href="https://cursos.timtec.com.br/" target="_blank">Veja</a>
+			</li>
+			
+			<li>
+				<a href="https://www.cursoemvideo.com" target="_blank">
+					<div class="resource-icon">
+						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p200x200/10801772_791822567553733_6114747510190883788_n.png?_nc_cat=111&_nc_ht=scontent.fcwb2-2.fna&oh=d9bcf2b8bd789716fce72de246bda5d1&oe=5C7CCC2A" alt="Cursos" />					
+					</div>
+				</a>
+				<div class="resource-details">
+					<h2> <a href="https://www.cursoemvideo.com" target="_blank">Curso em Vídeo</a> </h2>
+					<p>Cursos Gratuitos</p>
+				</div>
+				<a class="resource-button" href="https://www.cursoemvideo.com" target="_blank">Veja</a>
+			</li>
 			
 			<li>
 				<div class="resource-icon">
@@ -1824,17 +1851,18 @@
 			</li>
 			
 			<li>
-				<a href="https://cursos.timtec.com.br/" target="_blank">
+				<a href="https://www.learncafe.com/cursos" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/12993353_909861422444529_6773033912990293596_n.jpg?_nc_cat=106&_nc_ht=scontent.fcwb2-1.fna&oh=83b379b65c920cdb38531770ae8a2b4e&oe=5C7A22CE" alt="Cursos" />
+						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/19274859_1574479229276495_2862538952386405924_n.png?_nc_cat=111&_nc_ht=scontent.fcwb2-2.fna&oh=82e0177b1010c59656eb27017b8061c5&oe=5CACA813" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
-					<h2> <a href="https://cursos.timtec.com.br/" target="_blank">Tim Tec</a> </h2>
-					<p>Cursos Online Gratuito</p>
+					<h2> <a href="https://www.learncafe.com/cursos" target="_blank">Learncafe</a> </h2>
+					<p>Cursos Free</p>
 				</div>
-				<a class="resource-button" href="https://cursos.timtec.com.br/" target="_blank">Veja</a>
+				<a class="resource-button" href="https://www.learncafe.com/cursos" target="_blank">Veja</a>
 			</li>
+		
 
 			<div id="atalhos"></div>
 
