Plano de Estudos Exam 70-480

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2468,6 +2468,21 @@
         <a class="resource-button" href="http://www.accelerated-ideas.com/70480-practice-test.aspx#.W_Ry0-hKiUm" target="_blank">Veja</a>   
       </li>
 
+      <li>
+        <a href="https://medium.com/@lucasjleandro/plano-de-estudos-exam-70-480-964d0dc72d8b" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://medium.com/@lucasjleandro/plano-de-estudos-exam-70-480-964d0dc72d8b" target="_blank">[Plano de Estudos] Minha Experiência com o Exam 70–480</a>
+          </h2>
+          <p>Lucas Leandro (Associate Software Engineer na Avanade Brasil, formado em Analise e Desenvolvimento de Sistemas na FIAP.)</p>
+        </div>
+        <a class="resource-button" href="https://medium.com/@lucasjleandro/plano-de-estudos-exam-70-480-964d0dc72d8b" target="_blank">Veja</a>   
+      </li>
+
       <div id="foruns"></div>
 
       <div class="linha"></div>
