Developing in HTML5 with JavaScript and CSS3 Jump Start - Microsoft Virtual Academy

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2483,6 +2483,21 @@
         <a class="resource-button" href="https://medium.com/@lucasjleandro/plano-de-estudos-exam-70-480-964d0dc72d8b" target="_blank">Veja</a>   
       </li>
 
+      <li>
+        <a href="https://mva.microsoft.com/en-us/training-courses/developing-in-html5-with-javascript-and-css3-jump-start-8223?l=lCnp5kIy_5104984382" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://mva.microsoft.com/en-us/training-courses/developing-in-html5-with-javascript-and-css3-jump-start-8223?l=lCnp5kIy_5104984382" target="_blank">Developing in HTML5 with JavaScript and CSS3 Jump Start</a>
+          </h2>
+          <p>Microsoft Virtual Academy</p>
+        </div>
+        <a class="resource-button" href="https://mva.microsoft.com/en-us/training-courses/developing-in-html5-with-javascript-and-css3-jump-start-8223?l=lCnp5kIy_5104984382" target="_blank">Veja</a>   
+      </li>
+
       <div id="foruns"></div>
 
       <div class="linha"></div>
