Microsoft Certified Professional Exam Prep

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2498,6 +2498,23 @@
         <a class="resource-button" href="https://mva.microsoft.com/en-us/training-courses/developing-in-html5-with-javascript-and-css3-jump-start-8223?l=lCnp5kIy_5104984382" target="_blank">Veja</a>   
       </li>
 
+      <li>
+        <a href="https://channel9.msdn.com/Blogs/mcpexamprep/70-480-Programming-in-HTML5-with-JavaScript-and-CSS3" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/11391192_10153341290009231_4873638384574170064_n.png?_nc_cat=105&_nc_ht=scontent.fcwb2-1.fna&oh=2e34f4874e235605089c828bd5d19567&oe=5C6C7C92" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://channel9.msdn.com/Blogs/mcpexamprep/70-480-Programming-in-HTML5-with-JavaScript-and-CSS3" target="_blank">
+              Microsoft Certified Professional Exam Prep
+              70-480: Programming in HTML5 with JavaScript and CSS3</a>
+          </h2>
+          <p>Channel 9</p>
+        </div>
+        <a class="resource-button" href="https://channel9.msdn.com/Blogs/mcpexamprep/70-480-Programming-in-HTML5-with-JavaScript-and-CSS3" target="_blank">Veja</a>   
+      </li>
+
       <div id="foruns"></div>
 
       <div class="linha"></div>
