Playlist Guia de Estudo Exam 70*480

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2401,7 +2401,7 @@
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://ptgmedia.pearsoncmg.com/images/9780735676633/samplepages/9780735676633.pdf" target="_blank">Exam Ref 70-480 Programming in HTML5 with JavaScript and CSS3</a>
+            <a href="https://ptgmedia.pearsoncmg.com/images/9780735676633/samplepages/9780735676633.pdf" target="_blank">[Livro] Exam Ref 70-480 Programming in HTML5 with JavaScript and CSS3</a>
           </h2>
           <p>Livro preparatório para a certificação 70-480</p>
         </div>
@@ -2416,7 +2416,7 @@
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://www.microsoft.com/pt-br/learning/exam-70-480.aspx" target="_blank">Programação em HTML5 com JavaScript e CSS3</a>
+            <a href="https://www.microsoft.com/pt-br/learning/exam-70-480.aspx" target="_blank">[Descrição] Programação em HTML5 com JavaScript e CSS3</a>
           </h2>
           <p>Página de descrição da Certificação 70-480</p>
         </div>
@@ -2431,7 +2431,7 @@
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://mva.microsoft.com/pt-br/training-courses/introduo-rpida-ao-desenvolvimento-em-html5-com-javascript-e-css3-8223?l=AJoPBmRiB_9300115888" target="_blank">Introdução rápida ao desenvolvimento em HTML5 com JavaScript e CSS3</a>
+            <a href="https://mva.microsoft.com/pt-br/training-courses/introduo-rpida-ao-desenvolvimento-em-html5-com-javascript-e-css3-8223?l=AJoPBmRiB_9300115888" target="_blank">[Introdução rápida] ao desenvolvimento em HTML5 com JavaScript e CSS3</a>
           </h2>
           <p>Microsoft Virtual Academy</p>
         </div>
@@ -2446,7 +2446,7 @@
         </a>
         <div class="resource-details">
           <h2>
-            <a href="http://www.firebrandtraining.co.uk/pdf/learn/microsoft/mcsd-web-applications-html5-courseware.pdf" target="_blank">MCSD: 70-480: Programming in HTML5 with JavaScript and CSS3</a>
+            <a href="http://www.firebrandtraining.co.uk/pdf/learn/microsoft/mcsd-web-applications-html5-courseware.pdf" target="_blank">[Apostila] MCSD: 70-480: Programming in HTML5 with JavaScript and CSS3</a>
           </h2>
           <p>Firebrand Training</p>
         </div>
@@ -2461,7 +2461,7 @@
         </a>
         <div class="resource-details">
           <h2>
-            <a href="http://www.accelerated-ideas.com/70480-practice-test.aspx#.W_Ry0-hKiUm" target="_blank">70-480 Practice Test: HTML5, Javascript, CSS3</a>
+            <a href="http://www.accelerated-ideas.com/70480-practice-test.aspx#.W_Ry0-hKiUm" target="_blank">[Simulado] 70-480 Practice Test: HTML5, Javascript, CSS3</a>
           </h2>
           <p>Accelerated Ideas</p>
         </div>
@@ -2491,7 +2491,7 @@
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://mva.microsoft.com/en-us/training-courses/developing-in-html5-with-javascript-and-css3-jump-start-8223?l=lCnp5kIy_5104984382" target="_blank">Developing in HTML5 with JavaScript and CSS3 Jump Start</a>
+            <a href="https://mva.microsoft.com/en-us/training-courses/developing-in-html5-with-javascript-and-css3-jump-start-8223?l=lCnp5kIy_5104984382" target="_blank">[Curso] Developing in HTML5 with JavaScript and CSS3 Jump Start</a>
           </h2>
           <p>Microsoft Virtual Academy</p>
         </div>
@@ -2507,12 +2507,27 @@
         <div class="resource-details">
           <h2>
             <a href="https://channel9.msdn.com/Blogs/mcpexamprep/70-480-Programming-in-HTML5-with-JavaScript-and-CSS3" target="_blank">
-              Microsoft Certified Professional Exam Prep
-              70-480: Programming in HTML5 with JavaScript and CSS3</a>
+              [Vídeo Preparatório] - Microsoft Certified Professional Exam Prep</a>
           </h2>
           <p>Channel 9</p>
         </div>
         <a class="resource-button" href="https://channel9.msdn.com/Blogs/mcpexamprep/70-480-Programming-in-HTML5-with-JavaScript-and-CSS3" target="_blank">Veja</a>   
+      </li>
+
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PLwftZeDnOzt1Bbkn0Ue87GsYAe4TcUSSI" target="_blank">
+          <div class="resource-icon">
+            <img src="https://i.ytimg.com/vi/vmJ896cWXCQ/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLC52R4IbPl2T1nac2JHKuDz9PXhEw" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.youtube.com/playlist?list=PLwftZeDnOzt1Bbkn0Ue87GsYAe4TcUSSI" target="_blank">
+              [Guia de Estudo] Playlist 17 vídeos de 20 a 30 minutos</a>
+          </h2>
+          <p>Ray Carneiro</p>
+        </div>
+        <a class="resource-button" href="https://www.youtube.com/playlist?list=PLwftZeDnOzt1Bbkn0Ue87GsYAe4TcUSSI" target="_blank">Veja</a>   
       </li>
 
       <div id="foruns"></div>
