How to land a carrer in UX Design with zero qualifications

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -926,6 +926,22 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://br.udacity.com/blog/post/ux-ui-diferencas" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://uxplanet.org/how-to-land-a-career-in-ux-design-with-zero-qualifications-16ddcb3b3eda?fbclid=IwAR0I1NTTV2vQ7keeWvg8NS189-gdBwK6Aiyop7TXZXK1rIDW3KRC0RkrGn0" target="_blank">
+            <img src="https://cdn-images-1.medium.com/fit/c/60/60/1*MPWFMV0lM0JFcV0TiafeiQ.jpeg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://uxplanet.org/how-to-land-a-career-in-ux-design-with-zero-qualifications-16ddcb3b3eda?fbclid=IwAR0I1NTTV2vQ7keeWvg8NS189-gdBwK6Aiyop7TXZXK1rIDW3KRC0RkrGn0" target="_blank">How to land a career in UX design with zero qualifications
+            </a>
+          </h2>
+          <p>Gloria Lo (Medium)</p>
+        </div>
+        <a class="resource-button" href="https://uxplanet.org/how-to-land-a-career-in-ux-design-with-zero-qualifications-16ddcb3b3eda?fbclid=IwAR0I1NTTV2vQ7keeWvg8NS189-gdBwK6Aiyop7TXZXK1rIDW3KRC0RkrGn0" target="_blank">Veja</a>
+      </li>
+
     </ul>
       <ul class="sidebar-navigation">
               <li><a href="../apoio/index.html"><div class="circle"></div>Apoio</a></li>	
