atualização thumbnail Straw Pool

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -128,7 +128,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.strawpoll.me/" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/13307433_1115499378510722_2943287756945467912_n.png?_nc_cat=0&oh=d09baf03d4731d0cfe26e954b8171ae1&oe=5BEDC6BD" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/13307433_1115499378510722_2943287756945467912_n.png?_nc_cat=104&_nc_ht=scontent.fcwb2-1.fna&oh=285f40d20ff17636fd9ceb6ac30f6d9b&oe=5C646DBD" alt="#" />
           </a>
         </div>
         <div class="resource-details">
