linear-gradient, url(..img/header-bg.jpg) no background

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <!-- <div id="preloader">
   <div id="status"> <img src="img/preloader.gif" height="64" width="64" alt=""> </div>
 </div> -->
-
+<div class="front-image"></div>
 
 <!-- Navigation
     ==========================================-->
@@ -88,11 +88,14 @@
 </nav>
 
 <!-- Header -->
-<header class="text-center" name="home">
+
+<header class="text-center " name="home">
   <div class="intro-text">
+    <div class="front-image"></div>
     <h1 class="wow fadeInDown"><strong>Robson Vinicius <br> <span class="color">Designer</span></strong></h1>
     <p class="wow fadeInDown">Design Gráfico | Web Design | SEO<br>Rankeie bem com estratégias de Marketing Digital<br><strong>S</strong>earch <strong>E</strong>ngine <strong>O</strong>ptimization: Otimização para buscas</p>
-    <a href="http://www.robsondesigner.com/cv" target="_blank" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Meu Currículo</a> </div> <!--a href="#works-section-->
+    <a href="http://www.robsondesigner.com/cv" target="_blank" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Meu Currículo</a> 
+  </div> <!--a href="#works-section-->
 </header>
 
 <!-- Services Section -->
